# AI-Labs

Week 2/: Huffman.py  Huffman2.py  Huffman3.py  Huffman_photo.py  Week 2 report.pages  compress_words.txt  compressed_test3.bin.tree  compressed_words.bin.tree  ing_compression.py  words.txt
Week 2/tests/: test_Huffman.py  test_Huffman2.py  test_Huffman3.py
Week 3/: Lempel.py  decompress.py
Week 4/Project/: compressed_words.bin.tree  pyproject.toml
Week 4/Project/docs/: README.md  coverage_report.txt
Week 4/Project/src/ai_labs_project/: Huffman3_with_compress_serialized_tree.py  Lempel_with_compress.py  UI_implementation.py
Week 4/Project/tests/: test_huffman.py  test_lzw.py  test_ui.py
